# a4s

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  compose.dev.yml  compose.yml  deploy.sh  pyproject.toml
.github/workflows/: build-web.yml  ci.yml
agents/personal-assistant/: Dockerfile  pyproject.toml
agents/personal-assistant/src/: agent.py  config.py  server.py
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: config.py  models.py  server.py  utils.py
api/app/broker/: channel_registry.py  exceptions.py  models.py  qdrant_registry.py  registry.py  sqlite_channel_registry.py
api/app/memory/: config.py  factory.py  graphiti_manager.py  manager.py  mem0_manager.py  models.py
api/app/routers/v1/: __init__.py  agents.py  channels.py  memory.py  template_agents.py
api/app/runtime/: activity_monitor.py  agent_scheduler.py  docker_manager.py  exceptions.py  manager.py  models.py
api/app/skills/: exceptions.py  models.py  registry.py  sqlite_registry.py
demo/: __init__.py
demo/it-company/: README.md  SETUP.md  __init__.py  company_structure.json  setup.sh
demo/it-company/data/: agents.json
demo/it-company/data/memory/: alice_chen.json  frank_johnson.json  isabel_gomez.json  james_park.json  kate_thompson.json  luis_rodriguez.json  maya_singh.json  olivia_taylor.json  paul_anderson.json  tom_wilson.json
demo/it-company/scripts/: 01_register_agents.py  02_seed_memories.py  03_start_agents.py  04_verify_setup.py  cleanup.py
demo/it-company/seed_data/: alice_chen.json  bob_martinez.json  carol_kim.json  david_patel.json  emily_wang.json  frank_johnson.json  grace_liu.json  henry_brooks.json  isabel_gomez.json  james_park.json  kate_thompson.json  luis_rodriguez.json  maya_singh.json  nathan_lee.json  olivia_taylor.json  paul_anderson.json  quinn_roberts.json  rachel_green.json  sarah_miller.json  tom_wilson.json
demo/it-company/setup_scripts/: 01_register_agents.py  02_seed_memories.py  03_start_agents.py  04_verify_setup.py  __init__.py  cleanup.py
demo/it-company/test_scenarios/: __init__.py  design_collaboration.py
docs/: memory.md  serverless-runtime.md
e2e/: .env.example  Dockerfile  README.md  pyproject.toml  run.sh
e2e/hello_world_agent/: agent.py  config.py  server.py
e2e/placeholder_agent/: agent.py  config.py  server.py
lunarr/: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  pubspec.yaml
lunarr/.firebase/: hosting.LmZpcmViYXNlXGx1bmFyci0yMDI2XGhvc3Rpbmc.cache
lunarr/.firebase/lunarr-2026/hosting/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
lunarr/.firebase/lunarr-2026/hosting/assets/: AssetManifest.bin.json  FontManifest.json  NOTICES
lunarr/.firebase/lunarr-2026/hosting/assets/shaders/: stretch_effect.frag
lunarr/.firebase/lunarr-2026/hosting/canvaskit/: canvaskit.js  skwasm.js  skwasm_heavy.js
lunarr/.firebase/lunarr-2026/hosting/canvaskit/chromium/: canvaskit.js
lunarr/android/app/: build.gradle.kts
lunarr/android/app/src/main/: AndroidManifest.xml
lunarr/android/app/src/main/kotlin/com/example/lunarr/: MainActivity.kt
lunarr/ios/Runner/: Info.plist
lunarr/ios/Runner.xcodeproj/: project.pbxproj
lunarr/lib/: main.dart
lunarr/lib/constants/: colors.dart  texts.dart
lunarr/lib/controllers/: agent_chat_controller.dart  agent_controller.dart  channel_chat_controller.dart  channel_controller.dart  workspace_controller.dart
lunarr/lib/models/: agent.dart  agent_card_model.dart  agent_chat_model.dart  agent_model.dart  channel_chat_model.dart  channel_model.dart  chat_model.dart  sign_model.dart  user_model.dart  workspace_model.dart
lunarr/lib/services/: agent_card_service.dart  agent_service.dart  channel_service.dart  user_service.dart
lunarr/lib/views/: agent_chat_view.dart  agent_create_view.dart  agent_view.dart  agents_view.dart  channel_chat_view.dart  channel_create_view.dart  channel_view.dart  channels_view.dart  main_view.dart  sign_demo_view.dart  sign_in_view.dart  sign_up_1_view.dart  sign_up_2_view.dart  sign_up_3_view.dart  sign_view.dart  workspace_create_view.dart  workspaces_view.dart
lunarr/lib/widgets/: agent_card_dialog_widget.dart  agent_card_widget.dart  agent_chat_app_bar_widget.dart  channel_chat_app_bar_widget.dart  emblem_widget.dart
lunarr/linux/: CMakeLists.txt
lunarr/linux/runner/: my_application.cc
lunarr/macos/Runner.xcodeproj/: project.pbxproj
lunarr/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lunarr/macos/Runner/Configs/: AppInfo.xcconfig
lunarr/test/: widget_test.dart
lunarr/web/: index.html
lunarr/windows/: CMakeLists.txt
lunarr/windows/runner/: Runner.rc  main.cpp
mcp/: CLAUDE.md  README.md  pyproject.toml
mcp/a4s_mcp/: server.py
nginx/: nginx.conf.template
scripts/: demo-setup.sh
