[project]
name = "a4s"
version = "0.1.0"
description = "Orchestration system for AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
    "pytest>=9,<10",
    "pre-commit>=4,<5",
    "api",
    "a4s-mcp",
    "e2e",
    "personal-assistant",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
api = { workspace = true }
a4s-mcp = { workspace = true }
e2e = { workspace = true }
personal-assistant = { workspace = true }

[tool.uv.workspace]
members = [
    "api",
    "mcp",
    "e2e",
    "agents/*",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE",      # flake8-blind-except
    "D",        # pydocstyle
    "EM",       # flake8-errmsg
    "FBT",      # flake8-boolean-trap
    "FIX",      # flake8-fixme
    "TC",       # flake8-type-checking
    "TD",       # flake8-todos
    "TRY",      # tryceratops
    "SIM108",   # if-else-block-instead-of-if-exp
    "COM812",   # missing-trailing-comma (due to conflicts with formatter)
    "E501",     # line-too-long
    "T201",     # print-statement
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "ANN",      # flake8-annotations
    "S",        # flake8-bandit
    "SLF",      # flake8-self
    "ARG001",
]
