[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "API server for A4S"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "fastembed>=0.7.4",
    "mcp>=1.26.0",
    "mem0ai>=1.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
    "pytest>=9,<10",
    "pre-commit>=4,<5",
]
docker = [
    "docker>=7.1.0",
]
qdrant = [
    "qdrant-client>=1.16.2",
]
sqlite = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.1",
    "sqlite-vec>=0.1.6",
]

[tool.uv]
package = true
default-groups = ["dev", "docker", "qdrant", "sqlite"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE",      # flake8-blind-except
    "D",        # pydocstyle
    "EM",       # flake8-errmsg
    "FBT",      # flake8-boolean-trap
    "FIX",      # flake8-fixme
    "TC",       # flake8-type-checking
    "TD",       # flake8-todos
    "TRY",      # tryceratops
    "SIM108",   # if-else-block-instead-of-if-exp
    "COM812",   # missing-trailing-comma (due to conflicts with formatter)
    "E501",     # line-too-long
    "T201",     # print-statement
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "ANN",      # flake8-annotations
    "S",        # flake8-bandit
    "SLF",      # flake8-self
    "ARG001",
]
