[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "API server for A4S"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "fastembed>=0.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.32.0",
]

[dependency-groups]
docker = [
    "docker>=7.1.0",
]
qdrant = [
    "qdrant-client>=1.16.2",
]
sqlite = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.1",
    "sqlite-vec>=0.1.6",
]
graphiti = [
    "graphiti-core[falkordb]>=0.26.3",
]

[tool.uv]
package = true
default-groups = ["docker", "qdrant", "sqlite", "graphiti"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
