[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-assistant"
version = "0.1.0"
description = "Personal assistant agent that contains a user's personal context and knowledge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
